--- a/catch-of-the-day/public/index.html
+++ b/catch-of-the-day/public/index.html
@@ -9,6 +9,7 @@
     <input type="checkbox" id="fold">
     <label for="fold">Fold</label>
 
+    <!-- mounting point -->
     <div id="main">
       <!-- This is where our React app will go -->
     </div>
